# realworld-v1-rust-actix-web-diesel

./: .env.example  .envrc  .gitignore  Cargo.toml  Dockerfile  Dockerfile_tester  LICENSE.md  README.md  compose.yaml  devenv.nix  devenv.yaml  docker-compose.yml  flake.nix  wait-for-it.sh  x.sh
.github/workflows/: ci.yml  clippy-check.yml  rust.yml
doc/: data_flow.pu
e2e/: Dockerfile  Dockerfile_app  Dockerfile_tester  compose.yaml  openapi.yml  run-api-tests.sh
migrations/2021-10-19-170453_create_tags/: down.sql  up.sql
migrations/2021-10-21-064114_create_users/: up.sql
migrations/2021-10-24-020751_create_follows/: up.sql
migrations/2021-10-24-230744_create_articles/: up.sql
migrations/2021-10-25-170453_create_tags/: up.sql
migrations/2021-10-29-195721_create_comments/: up.sql
migrations/2021-10-29-224838_create_favorites/: down.sql  up.sql
scripts/: copy-env.sh
src/: auth.rs  constants.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/api/: mod.rs  tags.rs
src/api/articles/: favorites.rs
src/app/: mod.rs  profiles.rs  users.rs
src/app/article/: api.rs  mod.rs  model.rs  request.rs  response.rs  service.rs
src/app/article/favorite/: api.rs
src/app/article/tag/: api.rs  mod.rs  model.rs  response.rs  service.rs
src/app/articles/: comments.rs  mod.rs
src/app/comment/: api.rs  model.rs  response.rs  service.rs
src/app/drivers/: mod.rs  routes.rs
src/app/drivers/middlewares/: auth.rs  mod.rs  state.rs
src/app/favorite/: api.rs  mod.rs  model.rs  response.rs  service.rs
src/app/features/: mod.rs
src/app/features/article/: controllers.rs  entities.rs  presenters.rs  repositories.rs  usecases.rs
src/app/features/comment/: controllers.rs  entities.rs  presenters.rs  repositories.rs  request.rs  usecases.rs
src/app/features/favorite/: controllers.rs  entities.rs  mod.rs  presenters.rs  repositories.rs  usecases.rs
src/app/features/follow/: entities.rs
src/app/features/profile/: controllers.rs  presenters.rs  repositories.rs  usecases.rs
src/app/features/tag/: controllers.rs  entities.rs  presenters.rs  repositories.rs  usecases.rs
src/app/features/user/: controllers.rs  entities.rs  presenters.rs  repositories.rs  usecases.rs
src/app/follow/: model.rs
src/app/healthcheck/: api.rs
src/app/profile/: api.rs  model.rs  response.rs  service.rs
src/app/tag/: api.rs  model.rs  response.rs  service.rs
src/app/user/: api.rs  handler.rs  mod.rs  model.rs  network.rs  request.rs  response.rs  transformer.rs
src/appv2/drivers/: routes.rs
src/appv2/drivers/middlewares/: auth.rs  error.rs  state.rs
src/appv2/features/: mod.rs
src/appv2/features/article/: controllers.rs  entities.rs  mod.rs  presenters.rs  repositories.rs  requests.rs  services.rs  usecases.rs
src/appv2/features/comment/: controllers.rs  mod.rs  presenters.rs  repositories.rs  service.rs  usecases.rs
src/appv2/features/favorite/: controllers.rs  entities.rs  mod.rs  presenters.rs  repositories.rs  services.rs  usecases.rs
src/appv2/features/profile/: controllers.rs  entities.rs  mod.rs  presenters.rs  repositories.rs  services.rs  usecases.rs
src/appv2/features/tag/: controllers.rs  entities.rs  mod.rs  presenters.rs  repositories.rs  usecases.rs
src/articles/: comments.rs  mod.rs
src/middleware/: auth.rs  cors.rs  error.rs  mod.rs  state.rs
src/models/: mod.rs
src/utils/: api.rs  converter.rs  date.rs  db.rs  di.rs  hasher.rs  mod.rs  token.rs  uuid.rs
(+16 files in other folders)
