[package]
name = "conduit"
version = "0.1.0"
edition = "2018"
authors = ["Shun Namiki a.k.a Nash <snamiki1212@gmail.com>"]
license = "MIT"
repository = "https://github.com/snamiki1212/realworld-rust-actix-web"
readme = "README.md"
description = "Realworld Application with Rust / actix-web."

[dependencies]
actix-web = "3"

diesel = { version = "1.4", features = ["r2d2", "postgres", "chrono", "uuidv07", "serde_json"] }
dotenv = { version = "0.15" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "0.8", features = ["serde", "v4"] }
